add graphing and unit converter tools

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 <h2>Calculators</h2>
 <article class="tool-card"><a href="tools/basic-calculator/index.html">Basic Calculator</a></article>
 <article class="tool-card"><a href="tools/scientific-calculator/index.html">Scientific Calculator</a></article>
+<article class="tool-card"><a href="tools/graphing-calculator/index.html">Graphing Calculator</a></article>
+</section>
+<section id="converters">
+<h2>Converters</h2>
+<article class="tool-card"><a href="tools/unit-converter/index.html">Unit Converter</a></article>
 </section>
 <section id="generators">
 <h2>Generators</h2>
