--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <article class="tool-card"><a href="tools/basic-calculator/index.html">Basic Calculator</a></article>
 <article class="tool-card"><a href="tools/scientific-calculator/index.html">Scientific Calculator</a></article>
 <article class="tool-card"><a href="tools/graphing-calculator/index.html">Graphing Calculator</a></article>
+<article class="tool-card"><a href="tools/bmi-calculator/index.html">BMI Calculator</a></article>
 
 <article class="tool-card"><a href="tools/tip-calculator/index.html">Tip Calculator</a></article>
 <article class="tool-card"><a href="tools/percentage-calculator/index.html">Percentage Calculator</a></article>
