--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <article class="tool-card"><a href="tools/compound-interest-calculator/index.html">Compound Interest Calculator</a></article>
 <article class="tool-card"><a href="tools/loan-calculator/index.html">Loan Calculator</a></article>
 <article class="tool-card"><a href="tools/bmr-calculator/index.html">BMR Calculator</a></article>
+<article class="tool-card"><a href="tools/circle-area-calculator/index.html">Circle Area Calculator</a></article>
 </div>
 </section>
 <section id="converters">
