--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <article class="tool-card"><a href="tools/loan-calculator/index.html">Loan Calculator</a></article>
 <article class="tool-card"><a href="tools/bmr-calculator/index.html">BMR Calculator</a></article>
 <article class="tool-card"><a href="tools/circle-area-calculator/index.html">Circle Area Calculator</a></article>
+<article class="tool-card"><a href="tools/triangle-area-calculator/index.html">Triangle Area Calculator</a></article>
 </div>
 </section>
 <section id="converters">
