--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 <article class="tool-card"><a href="tools/compound-interest-calculator/index.html">Compound Interest Calculator</a></article>
 <article class="tool-card"><a href="tools/loan-calculator/index.html">Loan Calculator</a></article>
 <article class="tool-card"><a href="tools/bmr-calculator/index.html">BMR Calculator</a></article>
+<article class="tool-card"><a href="tools/epoch-time-converter/index.html">Epoch Time Converter</a></article>
+<article class="tool-card"><a href="tools/paint-coverage-calculator/index.html">Paint Coverage Calculator</a></article>
 <article class="tool-card"><a href="tools/circle-area-calculator/index.html">Circle Area Calculator</a></article>
 <article class="tool-card"><a href="tools/triangle-area-calculator/index.html">Triangle Area Calculator</a></article>
 </div>
@@ -63,6 +65,8 @@
 <article class="tool-card"><a href="tools/temperature-converter/index.html">Temperature Converter</a></article>
 <article class="tool-card"><a href="tools/time-zone-converter/index.html">Time Zone Converter</a></article>
 <article class="tool-card"><a href="tools/currency-converter/index.html">Currency Converter</a></article>
+<article class="tool-card"><a href="tools/color-converter/index.html">Color Converter</a></article>
+<article class="tool-card"><a href="tools/base64-encoder/index.html">Base64 Encoder/Decoder</a></article>
 </div>
 </section>
 <section id="productivity">
