Improve header layout and modernize styles

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <script defer src="app.min.js"></script>
 </head>
 <body>
-<header>
-<h1>MiniTools Universe</h1>
+<header class="site-header">
+<div class="container">
+<a href="index.html" class="logo">MiniTools Universe</a>
 <nav aria-label="Main">
 <ul>
 <li><a href="#calculators">Calculators</a></li>
@@ -26,6 +27,7 @@
 </ul>
 </nav>
 <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button>
+</div>
 </header>
 <main class="container">
 <section id="hero">
