--- a/tools/basic-calculator/index.html
+++ b/tools/basic-calculator/index.html
@@ -17,7 +17,7 @@
 </script>
 </head>
 <body>
-<header><a href="../../index.html">Home</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🧮</span> Basic Calculator</h1></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🧮</span> Basic Calculator</h1></div></header>
 <main>
 <p>Basic Calculator provides a straightforward way to handle everyday arithmetic. This <strong>online calculator</strong> works smoothly on mobile and desktop, letting you add, subtract, multiply and divide with ease. The design focuses on speed and clarity so you can perform quick calculations without fuss. Whether you're figuring out a tip or checking homework, this tool keeps your workflow simple. You can perform consecutive operations and see your results immediately. With a lightweight codebase, the calculator loads fast and stays responsive. Because it's built for the web, you can bookmark it and use it whenever you need. <em>Advanced functions</em> aren't included to keep the experience clean and focused on what most people use daily. After the first visit, all assets are cached, meaning you can run it even when offline. Try the Basic Calculator now!</p>
 <div id="calculator">
