--- a/tools/csv-to-json/index.html
+++ b/tools/csv-to-json/index.html
@@ -14,7 +14,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"CSV to JSON Converter","operatingSystem":"Any","applicationCategory":"DeveloperTool","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 </head>
 <body>
-<header><a href="../../index.html">Home</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📑</span> CSV to JSON Converter</h1></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📑</span> CSV to JSON Converter</h1></div></header>
 <main>
 <p>The <strong>CSV to JSON Converter</strong> turns your spreadsheet data into clean JSON for coding projects. Paste your comma-separated values and click convert to get structured output. This <em>online CSV converter</em> works offline after first load. Try the CSV to JSON Converter now!</p>
 <textarea id="csv-input" aria-label="CSV input" rows="6" cols="40"></textarea>
