--- a/tools/random-number-generator/index.html
+++ b/tools/random-number-generator/index.html
@@ -14,7 +14,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Random Number Generator","operatingSystem":"Any","applicationCategory":"Utility","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 </head>
 <body>
-<header><a href="../../index.html">Home</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎲</span> Random Number Generator</h1></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🎲</span> Random Number Generator</h1></div></header>
 <main>
 <p>The <strong>Random Number Generator</strong> creates numbers for games or decision-making. Enter a minimum and maximum value, then click generate. This <em>online RNG</em> works offline after first load. Try the Random Number Generator now!</p>
 <label>Min <input type="number" id="rng-min" value="1"></label>
