--- a/tools/scientific-calculator/index.html
+++ b/tools/scientific-calculator/index.html
@@ -14,7 +14,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Scientific Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 </head>
 <body>
-<header><a href="../../index.html">Home</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📐</span> Scientific Calculator</h1></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📐</span> Scientific Calculator</h1></div></header>
 <main>
 <p>Scientific Calculator offers <strong>advanced functions</strong> like sine, cosine, tangent and exponentiation. This <em>online scientific calculator</em> is ideal for students and professionals needing more than basic arithmetic. It works smoothly on desktop and mobile, caching assets for offline availability. Try the Scientific Calculator now!</p>
 <div id="sci-calc">
