--- a/tools/json-formatter/index.html
+++ b/tools/json-formatter/index.html
@@ -14,7 +14,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"JSON Formatter","operatingSystem":"Any","applicationCategory":"DeveloperTool","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 </head>
 <body>
-<header><a href="../../index.html">Home</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">{}</span> JSON Formatter</h1></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">{}</span> JSON Formatter</h1></div></header>
 <main>
 <p>The <strong>JSON Formatter</strong> cleans up messy JSON so you can read it easily. Paste your data and click format to see proper indentation and syntax highlighting. This <em>online JSON formatter</em> works offline after first load. Try the JSON Formatter now!</p>
 <textarea id="json-input" aria-label="JSON input" rows="6" cols="40"></textarea>
