--- a/tools/uuid-generator/index.html
+++ b/tools/uuid-generator/index.html
@@ -14,7 +14,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"UUID Generator","operatingSystem":"Any","applicationCategory":"DeveloperTool","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 </head>
 <body>
-<header><a href="../../index.html">Home</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🆔</span> UUID Generator</h1></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">🆔</span> UUID Generator</h1></div></header>
 <main>
 <p>The <strong>UUID Generator</strong> creates version&nbsp;4 identifiers for coding, databases and other development tasks. Click the button to produce a new random ID. This <em>online UUID generator</em> works offline after first load. Try the UUID Generator now!</p>
 <button id="uuid-btn">Generate UUID</button>
