--- a/tools/word-counter/index.html
+++ b/tools/word-counter/index.html
@@ -14,7 +14,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Word Counter","operatingSystem":"Any","applicationCategory":"TextTool","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 </head>
 <body>
-<header><a href="../../index.html">Home</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📝</span> Word Counter</h1></header>
+<header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><span class="emoji">📝</span> Word Counter</h1></div></header>
 <main>
 <p>The <strong>Word Counter</strong> helps you track the length of any text. Paste or type your content and see word and character counts update instantly. This <em>online word counter</em> is lightweight and works offline after first load. Try the Word Counter now!</p>
 <textarea id="wc-input" aria-label="Text input" rows="6" cols="40"></textarea>
