Add related tool links and styles

--- a/tools/age-calculator/index.html
+++ b/tools/age-calculator/index.html
@@ -22,6 +22,14 @@
 <label>Date of Birth <input type="date" id="birth" aria-label="Birth date"></label>
 <p id="result" aria-live="polite"></p>
 </div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../date-difference-calculator/index.html">Date Difference Calculator</a></li>
+<li><a href="../bmi-calculator/index.html">BMI Calculator</a></li>
+<li><a href="../basic-calculator/index.html">Basic Calculator</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
