--- a/tools/base64-encoder/index.html
+++ b/tools/base64-encoder/index.html
@@ -24,6 +24,14 @@
 <button id="decode">Decode</button>
 <p id="b64Output" aria-live="polite"></p>
 </div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../json-formatter/index.html">JSON Formatter</a></li>
+<li><a href="../csv-to-json/index.html">CSV to JSON Converter</a></li>
+<li><a href="../uuid-generator/index.html">UUID Generator</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
