--- a/tools/basic-calculator/index.html
+++ b/tools/basic-calculator/index.html
@@ -24,6 +24,14 @@
 <input type="text" id="display" aria-label="Display" readonly>
 <div class="keys" aria-label="Calculator keys"></div>
 </div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../scientific-calculator/index.html">Scientific Calculator</a></li>
+<li><a href="../percentage-calculator/index.html">Percentage Calculator</a></li>
+<li><a href="../unit-converter/index.html">Unit Converter</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
