--- a/tools/bmi-calculator/index.html
+++ b/tools/bmi-calculator/index.html
@@ -24,6 +24,14 @@
 <button id="calc">Calculate</button>
 <p id="bmiResult" aria-live="polite"></p>
 </div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../bmr-calculator/index.html">BMR Calculator</a></li>
+<li><a href="../age-calculator/index.html">Age Calculator</a></li>
+<li><a href="../basic-calculator/index.html">Basic Calculator</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
