--- a/tools/bmr-calculator/index.html
+++ b/tools/bmr-calculator/index.html
@@ -30,8 +30,8 @@
 <h2>Related Tools</h2>
 <ul>
 <li><a href="../bmi-calculator/index.html">BMI Calculator</a></li>
-<li><a href="../calorie-needs-calculator/index.html">Calorie Needs Calculator</a></li>
-<li><a href="../ideal-weight-calculator/index.html">Ideal Weight Calculator</a></li>
+<li><a href="../age-calculator/index.html">Age Calculator</a></li>
+<li><a href="../basic-calculator/index.html">Basic Calculator</a></li>
 </ul>
 </section>
 <section id="faq">
