--- a/tools/circle-area-calculator/index.html
+++ b/tools/circle-area-calculator/index.html
@@ -24,6 +24,14 @@
 <button id="calcArea">Calculate</button>
 <p id="result" aria-live="polite"></p>
 </div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../triangle-area-calculator/index.html">Triangle Area Calculator</a></li>
+<li><a href="../paint-coverage-calculator/index.html">Paint Coverage Calculator</a></li>
+<li><a href="../graphing-calculator/index.html">Graphing Calculator</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
