--- a/tools/color-converter/index.html
+++ b/tools/color-converter/index.html
@@ -25,6 +25,14 @@
 <p id="hsl"></p>
 <div id="preview" style="width:80px;height:80px;border-radius:8px;border:1px solid #ccc;margin-top:1rem"></div>
 </div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../unit-converter/index.html">Unit Converter</a></li>
+<li><a href="../temperature-converter/index.html">Temperature Converter</a></li>
+<li><a href="../currency-converter/index.html">Currency Converter</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
