--- a/tools/compound-interest-calculator/index.html
+++ b/tools/compound-interest-calculator/index.html
@@ -28,7 +28,7 @@
 <h2>Related Tools</h2>
 <ul>
 <li><a href="../simple-interest-calculator/index.html">Simple Interest Calculator</a></li>
-<li><a href="../roi-calculator/index.html">ROI Calculator</a></li>
+<li><a href="../loan-calculator/index.html">Loan Calculator</a></li>
 <li><a href="../discount-calculator/index.html">Discount Calculator</a></li>
 </ul>
 </section>
