--- a/tools/countdown-timer/index.html
+++ b/tools/countdown-timer/index.html
@@ -26,9 +26,9 @@
 <section id="links">
 <h2>Related Tools</h2>
 <ul>
-<li><a href="../pomodoro-timer/index.html">Pomodoro Timer</a></li>
 <li><a href="../stopwatch/index.html">Stopwatch</a></li>
-<li><a href="../habit-tracker/index.html">Habit Tracker</a></li>
+<li><a href="../random-number-generator/index.html">Random Number Generator</a></li>
+<li><a href="../tip-calculator/index.html">Tip Calculator</a></li>
 </ul>
 </section>
 <section id="faq">
