--- a/tools/date-difference-calculator/index.html
+++ b/tools/date-difference-calculator/index.html
@@ -23,6 +23,14 @@
 <label>End Date <input type="date" id="end" aria-label="End date"></label>
 <p id="result" aria-live="polite"></p>
 </div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../age-calculator/index.html">Age Calculator</a></li>
+<li><a href="../time-zone-converter/index.html">Time Zone Converter</a></li>
+<li><a href="../epoch-time-converter/index.html">Epoch Time Converter</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
