--- a/tools/epoch-time-converter/index.html
+++ b/tools/epoch-time-converter/index.html
@@ -26,6 +26,14 @@
 <button id="fromEpoch">From Epoch</button>
 <p id="dateResult" aria-live="polite"></p>
 </div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../time-zone-converter/index.html">Time Zone Converter</a></li>
+<li><a href="../date-difference-calculator/index.html">Date Difference Calculator</a></li>
+<li><a href="../age-calculator/index.html">Age Calculator</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
