--- a/tools/graphing-calculator/index.html
+++ b/tools/graphing-calculator/index.html
@@ -23,6 +23,14 @@
 <input id="gc-input" value="x^2" aria-label="Equation">
 <button id="gc-plot">Plot</button>
 <div id="gc-chart" style="width:100%;height:300px;"></div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../scientific-calculator/index.html">Scientific Calculator</a></li>
+<li><a href="../basic-calculator/index.html">Basic Calculator</a></li>
+<li><a href="../random-number-generator/index.html">Random Number Generator</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
