--- a/tools/paint-coverage-calculator/index.html
+++ b/tools/paint-coverage-calculator/index.html
@@ -25,6 +25,14 @@
 <button id="paintCalc">Calculate</button>
 <p id="paintResult" aria-live="polite"></p>
 </div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../circle-area-calculator/index.html">Circle Area Calculator</a></li>
+<li><a href="../triangle-area-calculator/index.html">Triangle Area Calculator</a></li>
+<li><a href="../loan-calculator/index.html">Loan Calculator</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
