--- a/tools/percentage-calculator/index.html
+++ b/tools/percentage-calculator/index.html
@@ -24,6 +24,14 @@
 <button id="percentBtn">Calculate</button>
 <p id="percentResult" aria-live="polite"></p>
 </div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../discount-calculator/index.html">Discount Calculator</a></li>
+<li><a href="../simple-interest-calculator/index.html">Simple Interest Calculator</a></li>
+<li><a href="../basic-calculator/index.html">Basic Calculator</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
