--- a/tools/stopwatch/index.html
+++ b/tools/stopwatch/index.html
@@ -28,8 +28,8 @@
 <h2>Related Tools</h2>
 <ul>
 <li><a href="../countdown-timer/index.html">Countdown Timer</a></li>
-<li><a href="../pomodoro-timer/index.html">Pomodoro Timer</a></li>
-<li><a href="../interval-timer/index.html">Interval Timer</a></li>
+<li><a href="../random-number-generator/index.html">Random Number Generator</a></li>
+<li><a href="../tip-calculator/index.html">Tip Calculator</a></li>
 </ul>
 </section>
 <section id="faq">
