--- a/tools/unit-converter/index.html
+++ b/tools/unit-converter/index.html
@@ -25,6 +25,14 @@
 <select id="uc-from"></select>
 <select id="uc-to"></select>
 <p id="uc-result" aria-live="polite"></p>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../temperature-converter/index.html">Temperature Converter</a></li>
+<li><a href="../currency-converter/index.html">Currency Converter</a></li>
+<li><a href="../time-zone-converter/index.html">Time Zone Converter</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
