--- a/tools/csv-to-json/index.html
+++ b/tools/csv-to-json/index.html
@@ -20,6 +20,14 @@
 <textarea id="csv-input" aria-label="CSV input" rows="6" cols="40"></textarea>
 <button id="csv-btn">Convert</button>
 <pre id="csv-output"></pre>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../json-formatter/index.html">JSON Formatter</a></li>
+<li><a href="../base64-encoder/index.html">Base64 Encoder/Decoder</a></li>
+<li><a href="../uuid-generator/index.html">UUID Generator</a></li>
+</ul>
+</section>
 </main>
 <footer><a href="../../index.html">Home</a></footer>
 <script>
