--- a/tools/json-formatter/index.html
+++ b/tools/json-formatter/index.html
@@ -20,6 +20,14 @@
 <textarea id="json-input" aria-label="JSON input" rows="6" cols="40"></textarea>
 <button id="json-btn">Format</button>
 <pre id="json-output"></pre>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../csv-to-json/index.html">CSV to JSON Converter</a></li>
+<li><a href="../base64-encoder/index.html">Base64 Encoder/Decoder</a></li>
+<li><a href="../uuid-generator/index.html">UUID Generator</a></li>
+</ul>
+</section>
 </main>
 <footer><a href="../../index.html">Home</a></footer>
 <script>document.getElementById('json-btn').addEventListener('click',()=>{try{const obj=JSON.parse(document.getElementById('json-input').value);document.getElementById('json-output').textContent=JSON.stringify(obj,null,2);}catch(e){document.getElementById('json-output').textContent='Invalid JSON';}});</script>
