--- a/tools/random-number-generator/index.html
+++ b/tools/random-number-generator/index.html
@@ -21,6 +21,14 @@
 <label>Max <input type="number" id="rng-max" value="100"></label>
 <button id="rng-btn">Generate</button>
 <p id="rng-result" aria-live="polite" style="font-size:2rem;font-weight:600"></p>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../uuid-generator/index.html">UUID Generator</a></li>
+<li><a href="../percentage-calculator/index.html">Percentage Calculator</a></li>
+<li><a href="../stopwatch/index.html">Stopwatch</a></li>
+</ul>
+</section>
 </main>
 <footer><a href="../../index.html">Home</a></footer>
 <script>document.getElementById('rng-btn').addEventListener('click',()=>{const min=parseInt(document.getElementById('rng-min').value)||0;const max=parseInt(document.getElementById('rng-max').value)||0;const r=Math.floor(Math.random()*(max-min+1))+min;document.getElementById('rng-result').textContent=r;});</script>
