--- a/tools/scientific-calculator/index.html
+++ b/tools/scientific-calculator/index.html
@@ -21,6 +21,14 @@
 <input type="text" id="sci-display" aria-label="Display" readonly>
 <div class="keys" aria-label="Calculator keys"></div>
 </div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../basic-calculator/index.html">Basic Calculator</a></li>
+<li><a href="../graphing-calculator/index.html">Graphing Calculator</a></li>
+<li><a href="../percentage-calculator/index.html">Percentage Calculator</a></li>
+</ul>
+</section>
 </main>
 <footer><a href="../../index.html">Home</a></footer>
 <script>const d2=document.getElementById('sci-display');const k2=document.querySelector('#sci-calc .keys');['7','8','9','/','sin','cos','tan','4','5','6','*','^','sqrt','1','2','3','-','0','.','=','+','C'].forEach(v=>{const b=document.createElement('button');b.textContent=v;b.addEventListener('click',()=>{if(v==='C')d2.value='';else if(v==='='){try{d2.value=eval(d2.value);}catch(e){d2.value='Error';}}else if(v==='sin')d2.value=Math.sin(parseFloat(d2.value)||0);else if(v==='cos')d2.value=Math.cos(parseFloat(d2.value)||0);else if(v==='tan')d2.value=Math.tan(parseFloat(d2.value)||0);else if(v==='sqrt')d2.value=Math.sqrt(parseFloat(d2.value)||0);else if(v==='^')d2.value+='**';else d2.value+=v;});k2.appendChild(b);});</script>
