--- a/tools/temperature-converter/index.html
+++ b/tools/temperature-converter/index.html
@@ -22,6 +22,14 @@
 <label>Celsius <input type="number" id="celsius" aria-label="Celsius"></label>
 <label>Fahrenheit <input type="number" id="fahrenheit" aria-label="Fahrenheit"></label>
 </div>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../unit-converter/index.html">Unit Converter</a></li>
+<li><a href="../color-converter/index.html">Color Converter</a></li>
+<li><a href="../currency-converter/index.html">Currency Converter</a></li>
+</ul>
+</section>
 <section id="faq">
 <h2>FAQ</h2>
 <dl>
