--- a/tools/uuid-generator/index.html
+++ b/tools/uuid-generator/index.html
@@ -19,6 +19,14 @@
 <p>The <strong>UUID Generator</strong> creates version&nbsp;4 identifiers for coding, databases and other development tasks. Click the button to produce a new random ID. This <em>online UUID generator</em> works offline after first load. Try the UUID Generator now!</p>
 <button id="uuid-btn">Generate UUID</button>
 <p id="uuid-result" aria-live="polite"></p>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../json-formatter/index.html">JSON Formatter</a></li>
+<li><a href="../base64-encoder/index.html">Base64 Encoder/Decoder</a></li>
+<li><a href="../csv-to-json/index.html">CSV to JSON Converter</a></li>
+</ul>
+</section>
 </main>
 <footer><a href="../../index.html">Home</a></footer>
 <script>document.getElementById('uuid-btn').addEventListener('click',()=>{const u=crypto.randomUUID();document.getElementById('uuid-result').textContent=u;});</script>
