--- a/tools/word-counter/index.html
+++ b/tools/word-counter/index.html
@@ -19,6 +19,14 @@
 <p>The <strong>Word Counter</strong> helps you track the length of any text. Paste or type your content and see word and character counts update instantly. This <em>online word counter</em> is lightweight and works offline after first load. Try the Word Counter now!</p>
 <textarea id="wc-input" aria-label="Text input" rows="6" cols="40"></textarea>
 <p>Words: <span id="wc-words">0</span> | Characters: <span id="wc-chars">0</span></p>
+<section id="related" class="related-tools">
+<h2>Related Tools</h2>
+<ul>
+<li><a href="../base64-encoder/index.html">Base64 Encoder/Decoder</a></li>
+<li><a href="../csv-to-json/index.html">CSV to JSON Converter</a></li>
+<li><a href="../json-formatter/index.html">JSON Formatter</a></li>
+</ul>
+</section>
 </main>
 <footer><a href="../../index.html">Home</a></footer>
 <script>const i=document.getElementById('wc-input'),w=document.getElementById('wc-words'),c=document.getElementById('wc-chars');i.addEventListener('input',()=>{w.textContent=(i.value.trim().match(/\S+/g)||[]).length;c.textContent=i.value.length;});</script>
