Add Body Fat and Pomodoro tools

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <article class="tool-card"><span class="emoji">💹</span><a href="tools/compound-interest-calculator/index.html">Compound Interest Calculator</a></article>
 <article class="tool-card"><span class="emoji">🏦</span><a href="tools/loan-calculator/index.html">Loan Calculator</a></article>
 <article class="tool-card"><span class="emoji">🔥</span><a href="tools/bmr-calculator/index.html">BMR Calculator</a></article>
+<article class="tool-card"><span class="emoji">💪</span><a href="tools/body-fat-calculator/index.html">Body Fat Calculator</a></article>
 <article class="tool-card"><span class="emoji">⏱️</span><a href="tools/epoch-time-converter/index.html">Epoch Time Converter</a></article>
 <article class="tool-card"><span class="emoji">🎨</span><a href="tools/paint-coverage-calculator/index.html">Paint Coverage Calculator</a></article>
 <article class="tool-card"><span class="emoji">⭕</span><a href="tools/circle-area-calculator/index.html">Circle Area Calculator</a></article>
@@ -82,6 +83,7 @@
 <div class="tool-grid animate__animated animate__zoomIn">
 <article class="tool-card"><span class="emoji">⏳</span><a href="tools/countdown-timer/index.html">Countdown Timer</a></article>
 <article class="tool-card"><span class="emoji">⏱️</span><a href="tools/stopwatch/index.html">Stopwatch</a></article>
+<article class="tool-card"><span class="emoji">🍅</span><a href="tools/pomodoro-timer/index.html">Pomodoro Timer</a></article>
 </div>
 </section>
 <section id="generators">
