--- a/index.html
+++ b/index.html
@@ -2,113 +2,146 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>MiniTools Universe - Handy Online Utilities</title>
-<meta name="description" content="Collection of handy online utilities including calculators, converters and creative tools." />
-<meta property="og:title" content="MiniTools Universe"/>
-<meta property="og:description" content="Collection of handy online utilities"/>
-<link rel="canonical" href="https://example.com/" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-TNPe8tkCbZ2M1zDh/QEqplLWYwgdEN0OZK0s8AjtKoa6HgMHtYjgJv1bLvK+cvM/" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-<link rel="stylesheet" href="style.min.css">
-<link rel="stylesheet" href="dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
-<script defer src="app.min.js"></script>
-<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6ZvzLJz2GV5/C/PObbIVdQydb9h9NP7VDaRao7IhiHBpjz2uVH54camz1Dtr1cG" crossorigin="anonymous"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>MiniTools Universe</title>
+<meta name="description" content="All your favorite calculators, converters and more in a single offline-friendly hub.">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header class="site-header">
-<div class="container">
-<a href="index.html" class="logo">MiniTools Universe</a>
-<nav aria-label="Main">
-<ul>
-<li><a href="#calculators">Calculators</a></li>
-<li><a href="#converters">Converters</a></li>
-<li><a href="#productivity">Productivity</a></li>
-<li><a href="#generators">Generators</a></li>
-<li><a href="#developer">Developer</a></li>
-<li><a href="#text">Text Tools</a></li>
-</ul>
-</nav>
-<button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button>
-</div>
+<header class="navbar" id="top">
+  <a class="logo" href="#top">MiniTools Universe</a>
+  <button id="menuBtn" class="menu-btn" aria-label="Toggle navigation">☰</button>
+  <nav id="nav" aria-label="Main navigation">
+    <a href="#calculators">Calculators</a>
+    <a href="#converters">Converters</a>
+    <a href="#productivity">Productivity</a>
+    <a href="#generators">Generators</a>
+    <a href="#developer">Developer</a>
+    <a href="#text">Text Tools</a>
+  </nav>
 </header>
-<main class="container">
-<section id="hero" class="animate__animated animate__fadeIn">
-<h2>All your tools in one place</h2>
-<p>Explore our growing set of utilities.</p>
-</section>
-<section id="search">
-<input type="search" id="toolSearch" aria-label="Search tools" placeholder="Search tools..." />
-</section>
-<section id="calculators">
-<h2>Calculators</h2>
-<div class="tool-grid animate__animated animate__zoomIn">
-<article class="tool-card"><span class="emoji">🧮</span><a href="tools/basic-calculator/index.html">Basic Calculator</a></article>
-<article class="tool-card"><span class="emoji">📐</span><a href="tools/scientific-calculator/index.html">Scientific Calculator</a></article>
-<article class="tool-card"><span class="emoji">📈</span><a href="tools/graphing-calculator/index.html">Graphing Calculator</a></article>
-<article class="tool-card"><span class="emoji">💵</span><a href="tools/tip-calculator/index.html">Tip Calculator</a></article>
-<article class="tool-card"><span class="emoji">📊</span><a href="tools/percentage-calculator/index.html">Percentage Calculator</a></article>
-<article class="tool-card"><span class="emoji">🏷️</span><a href="tools/discount-calculator/index.html">Discount Calculator</a></article>
-<article class="tool-card"><span class="emoji">🎂</span><a href="tools/age-calculator/index.html">Age Calculator</a></article>
-<article class="tool-card"><span class="emoji">⚖️</span><a href="tools/bmi-calculator/index.html">BMI Calculator</a></article>
-<article class="tool-card"><span class="emoji">📆</span><a href="tools/date-difference-calculator/index.html">Date Difference Calculator</a></article>
-<article class="tool-card"><span class="emoji">¼</span><a href="tools/fraction-calculator/index.html">Fraction Calculator</a></article>
-<article class="tool-card"><span class="emoji">💰</span><a href="tools/simple-interest-calculator/index.html">Simple Interest Calculator</a></article>
-<article class="tool-card"><span class="emoji">💹</span><a href="tools/compound-interest-calculator/index.html">Compound Interest Calculator</a></article>
-<article class="tool-card"><span class="emoji">🏦</span><a href="tools/loan-calculator/index.html">Loan Calculator</a></article>
-<article class="tool-card"><span class="emoji">🔥</span><a href="tools/bmr-calculator/index.html">BMR Calculator</a></article>
-<article class="tool-card"><span class="emoji">💪</span><a href="tools/body-fat-calculator/index.html">Body Fat Calculator</a></article>
-<article class="tool-card"><span class="emoji">⏱️</span><a href="tools/epoch-time-converter/index.html">Epoch Time Converter</a></article>
-<article class="tool-card"><span class="emoji">🎨</span><a href="tools/paint-coverage-calculator/index.html">Paint Coverage Calculator</a></article>
-<article class="tool-card"><span class="emoji">⭕</span><a href="tools/circle-area-calculator/index.html">Circle Area Calculator</a></article>
-<article class="tool-card"><span class="emoji">🔺</span><a href="tools/triangle-area-calculator/index.html">Triangle Area Calculator</a></article>
-</div>
-</section>
-<section id="converters">
-<h2>Converters</h2>
-<div class="tool-grid animate__animated animate__zoomIn">
-<article class="tool-card"><span class="emoji">🔄</span><a href="tools/unit-converter/index.html">Unit Converter</a></article>
-<article class="tool-card"><span class="emoji">🌡️</span><a href="tools/temperature-converter/index.html">Temperature Converter</a></article>
-<article class="tool-card"><span class="emoji">🕑</span><a href="tools/time-zone-converter/index.html">Time Zone Converter</a></article>
-<article class="tool-card"><span class="emoji">💱</span><a href="tools/currency-converter/index.html">Currency Converter</a></article>
-<article class="tool-card"><span class="emoji">🎨</span><a href="tools/color-converter/index.html">Color Converter</a></article>
-<article class="tool-card"><span class="emoji">🔤</span><a href="tools/base64-encoder/index.html">Base64 Encoder/Decoder</a></article>
-</div>
-</section>
-<section id="productivity">
-<h2>Productivity</h2>
-<div class="tool-grid animate__animated animate__zoomIn">
-<article class="tool-card"><span class="emoji">⏳</span><a href="tools/countdown-timer/index.html">Countdown Timer</a></article>
-<article class="tool-card"><span class="emoji">⏱️</span><a href="tools/stopwatch/index.html">Stopwatch</a></article>
-<article class="tool-card"><span class="emoji">🍅</span><a href="tools/pomodoro-timer/index.html">Pomodoro Timer</a></article>
-</div>
-</section>
-<section id="generators">
-<h2>Generators</h2>
-<div class="tool-grid animate__animated animate__zoomIn">
-<article class="tool-card"><span class="emoji">🎲</span><a href="tools/random-number-generator/index.html">Random Number Generator</a></article>
-</div>
-</section>
-<section id="developer">
-<h2>Developer Tools</h2>
-<div class="tool-grid animate__animated animate__zoomIn">
-<article class="tool-card"><span class="emoji">🆔</span><a href="tools/uuid-generator/index.html">UUID Generator</a></article>
-<article class="tool-card"><span class="emoji">{}</span><a href="tools/json-formatter/index.html">JSON Formatter</a></article>
-<article class="tool-card"><span class="emoji">📑</span><a href="tools/csv-to-json/index.html">CSV to JSON Converter</a></article>
-</div>
-</section>
-<section id="text">
-<h2>Text Tools</h2>
-<div class="tool-grid animate__animated animate__zoomIn">
-<article class="tool-card"><span class="emoji">📝</span><a href="tools/word-counter/index.html">Word Counter</a></article>
-</div>
-</section>
+<main>
+  <section class="hero" id="hero">
+    <h1>All your tools in one place</h1>
+    <p>Find the right utility instantly and use it offline.</p>
+    <input id="search" type="search" placeholder="Search tools" aria-label="Search tools" autofocus>
+    <svg class="stars" width="100%" height="100%" preserveAspectRatio="none" aria-hidden="true">
+      <circle cx="20%" cy="30%" r="1"/>
+      <circle cx="40%" cy="80%" r="1"/>
+      <circle cx="70%" cy="50%" r="1"/>
+      <circle cx="90%" cy="20%" r="1"/>
+      <circle cx="15%" cy="70%" r="1"/>
+    </svg>
+  </section>
+  <section id="calculators">
+    <h2>Calculators</h2>
+    <div class="tool-grid">
+      <a href="tools/basic-calculator/index.html" class="tool-card" data-name="Basic Calculator">
+        <span class="icon">🧮</span>
+        <strong>Basic Calculator</strong>
+        <p class="desc">Perform everyday arithmetic with ease.</p>
+      </a>
+      <a href="tools/scientific-calculator/index.html" class="tool-card" data-name="Scientific Calculator">
+        <span class="icon">🔬</span>
+        <strong>Scientific Calculator</strong>
+        <p class="desc">Advanced functions for higher math.</p>
+      </a>
+      <a href="tools/loan-calculator/index.html" class="tool-card" data-name="Loan Calculator">
+        <span class="icon">🏦</span>
+        <strong>Loan Calculator</strong>
+        <p class="desc">Estimate repayments quickly.</p>
+      </a>
+    </div>
+  </section>
+  <section id="converters">
+    <h2>Converters</h2>
+    <div class="tool-grid">
+      <a href="tools/unit-converter/index.html" class="tool-card" data-name="Unit Converter">
+        <span class="icon">📏</span>
+        <strong>Unit Converter</strong>
+        <p class="desc">Switch between metric and imperial.</p>
+      </a>
+      <a href="tools/currency-converter/index.html" class="tool-card" data-name="Currency Converter">
+        <span class="icon">💱</span>
+        <strong>Currency Converter</strong>
+        <p class="desc">Convert money with offline rates.</p>
+      </a>
+      <a href="tools/time-zone-converter/index.html" class="tool-card" data-name="Time Zone Converter">
+        <span class="icon">🌍</span>
+        <strong>Time Zone Converter</strong>
+        <p class="desc">Plan meetings across the world.</p>
+      </a>
+    </div>
+  </section>
+  <section id="productivity">
+    <h2>Productivity</h2>
+    <div class="tool-grid">
+      <a href="tools/pomodoro-timer/index.html" class="tool-card" data-name="Pomodoro Timer">
+        <span class="icon">🍅</span>
+        <strong>Pomodoro Timer</strong>
+        <p class="desc">Boost focus with timed sessions.</p>
+      </a>
+      <a href="tools/stopwatch/index.html" class="tool-card" data-name="Stopwatch">
+        <span class="icon">⏱️</span>
+        <strong>Stopwatch</strong>
+        <p class="desc">Track elapsed time accurately.</p>
+      </a>
+      <a href="tools/countdown-timer/index.html" class="tool-card" data-name="Countdown Timer">
+        <span class="icon">⏳</span>
+        <strong>Countdown Timer</strong>
+        <p class="desc">Set alarms for any deadline.</p>
+      </a>
+    </div>
+  </section>
+  <section id="generators">
+    <h2>Generators</h2>
+    <div class="tool-grid">
+      <a href="tools/random-number-generator/index.html" class="tool-card" data-name="Random Number Generator">
+        <span class="icon">🎲</span>
+        <strong>Random Number Generator</strong>
+        <p class="desc">Pick numbers for games or draws.</p>
+      </a>
+      <a href="tools/uuid-generator/index.html" class="tool-card" data-name="UUID Generator">
+        <span class="icon">🆔</span>
+        <strong>UUID Generator</strong>
+        <p class="desc">Create unique identifiers offline.</p>
+      </a>
+    </div>
+  </section>
+  <section id="developer">
+    <h2>Developer</h2>
+    <div class="tool-grid">
+      <a href="tools/json-formatter/index.html" class="tool-card" data-name="JSON Formatter">
+        <span class="icon">{}</span>
+        <strong>JSON Formatter</strong>
+        <p class="desc">Beautify JSON data instantly.</p>
+      </a>
+      <a href="tools/csv-to-json/index.html" class="tool-card" data-name="CSV to JSON Converter">
+        <span class="icon">📑</span>
+        <strong>CSV to JSON</strong>
+        <p class="desc">Transform spreadsheets to JSON.</p>
+      </a>
+    </div>
+  </section>
+  <section id="text">
+    <h2>Text Tools</h2>
+    <div class="tool-grid">
+      <a href="tools/word-counter/index.html" class="tool-card" data-name="Word Counter">
+        <span class="icon">📝</span>
+        <strong>Word Counter</strong>
+        <p class="desc">Count words and characters fast.</p>
+      </a>
+      <a href="tools/base64-encoder/index.html" class="tool-card" data-name="Base64 Encoder">
+        <span class="icon">🔤</span>
+        <strong>Base64 Encoder</strong>
+        <p class="desc">Encode or decode Base64 strings.</p>
+      </a>
+    </div>
+  </section>
 </main>
 <footer>
-<p>&copy; 2024 MiniTools Universe</p>
+  <p>© 2024 MiniTools Universe</p>
 </footer>
+<script src="app.js"></script>
 </body>
 </html>
