Add car loan and fuel cost calculators

--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
         }
       }
     };
+      <a href="tools/car-loan-calculator/index.html" x-data="{name:'car loan calculator'}" x-show="name.includes(search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition animate__animated animate__zoomIn" data-aos="fade-up">
+        <span class="text-3xl block mb-2">🚗</span>
+        <span class="font-semibold">Car Loan Calculator</span>
+        <p class="text-sm opacity-70 mt-1">Estimate car payments with down payment.</p>
+        <i class="fa-solid fa-arrow-right absolute bottom-4 right-4 opacity-0 group-hover:opacity-100 transition-transform group-hover:translate-x-1"></i>
+      </a>
+      <a href="tools/fuel-cost-calculator/index.html" x-data="{name:'fuel cost calculator'}" x-show="name.includes(search.toLowerCase())" class="tool-card group relative bg-surface rounded-lg p-4 ring-1 ring-white/5 hover:-translate-y-1 hover:ring-accent/50 transition animate__animated animate__zoomIn" data-aos="fade-up">
+        <span class="text-3xl block mb-2">⛽</span>
+        <span class="font-semibold">Fuel Cost Calculator</span>
+        <p class="text-sm opacity-70 mt-1">Plan trip expenses by distance and MPG.</p>
+        <i class="fa-solid fa-arrow-right absolute bottom-4 right-4 opacity-0 group-hover:opacity-100 transition-transform group-hover:translate-x-1"></i>
+      </a>
   </script>
 </head>
 
